feat: redpanda (kafka)

--- a/extensions/redpanda/redpanda.yaml
+++ b/extensions/redpanda/redpanda.yaml
@@ -51,3 +51,11 @@ spec:
   - name: admin
     port: 9644
     targetPort: 9644
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: redpanda-config
+data:
+  redpanda.yaml: |
+    enable_auto_creation: true
